Update liveness and readiness probes paths

--- a/charts/langflow-ide/templates/backend-statefulset.yaml
+++ b/charts/langflow-ide/templates/backend-statefulset.yaml
@@ -85,7 +85,7 @@ spec:
           {{- end }}
           livenessProbe:
             httpGet:
-              path: /health
+              path: /api/v1/version
               port: http
               
             initialDelaySeconds: {{ .Values.langflow.backend.probe.initialDelaySeconds }}
@@ -94,7 +94,7 @@ spec:
             failureThreshold: {{ .Values.langflow.backend.probe.failureThreshold }}   
           readinessProbe:
             httpGet:
-              path: /health
+              path: /api/v1/version
               port: http
             initialDelaySeconds: {{ .Values.langflow.backend.probe.initialDelaySeconds }}
             periodSeconds: {{ .Values.langflow.backend.probe.periodSeconds }}
